--- a/milestone_4/CPSC304_Node_Project-main/.env
+++ b/milestone_4/CPSC304_Node_Project-main/.env
@@ -1,12 +1,12 @@
 # TODO: Edit the values below this line according to the given placeholders
 # Replace 'ora_YOUR-CWL-USERNAME' with "ora_" (no quotation marks) followed by your CWL username.
-ORACLE_USER=ora_wwang79
+ORACLE_USER=ora_cyeho
 # Replace 'YOUR-STUDENT-NUMBER' with your actual student number.
-ORACLE_PASS=a32227530
+ORACLE_PASS=a94750692
 
 
 #Adjust the PORT if needed (e.g., if you encounter a "port already occupied" error)
-PORT=50001
+PORT=50005
 
 # -------------- The three lines below should be left unaltered --------------
 ORACLE_HOST=dbhost.students.cs.ubc.ca
